Switch to Firebase auth - Replace App.jsx with AppFirebase version using Firebase Auth listener

--- a/client/.env.local
+++ b/client/.env.local
@@ -1,10 +1,20 @@
 # Firebase Config (À remplir avec tes valeurs Firebase)
-VITE_FIREBASE_API_KEY=AIzaSyDXXXXXXXXXXXXXXXXXXXXXXXXX
-VITE_FIREBASE_AUTH_DOMAIN=loup-garou-online.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=loup-garou-online
-VITE_FIREBASE_STORAGE_BUCKET=loup-garou-online.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=1234567890
-VITE_FIREBASE_APP_ID=1:1234567890:web:abcdefXXXXXX
+# IMPORTANT: Copie-colle tes valeurs depuis Firebase Console!
+# Sinon ça va pas marcher!
 
-# API Backend
-VITE_API_URL=http://localhost:5000/api
+# Exemple de ce que tu dois copier:
+# const firebaseConfig = {
+#   apiKey: "COPIE_ICI",
+#   authDomain: "COPIE_ICI",
+#   projectId: "COPIE_ICI",
+#   storageBucket: "COPIE_ICI",
+#   messagingSenderId: "COPIE_ICI",
+#   appId: "COPIE_ICI"
+# };
+
+VITE_FIREBASE_API_KEY=AIzaSyDNe7xgelmuQ-A3WKDZ3vIGVryzltmSn2w
+VITE_FIREBASE_AUTH_DOMAIN=loup-41537.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=loup-41537
+VITE_FIREBASE_STORAGE_BUCKET=loup-41537.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=699831197906
+VITE_FIREBASE_APP_ID=1:699831197906:web:033dae6a31267cac254d0b
