--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "firebase": "^12.6.0",
+    "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
-    "axios": "^1.6.2",
-    "socket.io-client": "^4.6.0",
-    "framer-motion": "^10.16.16"
+    "socket.io-client": "^4.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
